[project]
name = "nexushub"
version = "0.1.0"
description = ""
authors = [
    {name = "River-Shi",email = "nachuan.shi.quant@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "aiolimiter>=1.2.1",
    "cysimdjson>=24.12",
    "grpcio>=1.71.0",
    "grpcio-tools>=1.71.0",
    "loguru>=0.7.3",
    "orjson>=3.10.15",
    "picows>=1.8.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
