[project]
name = "nexushub"
version = "0.1.0"
description = ""
authors = [
    {name = "River-Shi",email = "nachuan.shi.quant@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "aiohttp>=3.11.16",
    "aiolimiter>=1.2.1",
    "apscheduler>=3.11.0",
    "asynciolimiter>=1.2.0",
    "certifi>=2025.1.31",
    "clickhouse-connect>=0.8.17",
    "cysimdjson<=24.12",
    "duckdb>=1.2.2",
    "filelock>=3.18.0",
    "grpcio>=1.71.0",
    "grpcio-tools>=1.71.0",
    "loguru>=0.7.3",
    "msgspec>=0.19.0",
    "orjson>=3.10.15",
    "pandas>=2.2.3",
    "picows>=1.8.0",
    "polars>=1.27.1",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=19.0.1",
    "pyrate-limiter>=3.7.0",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "tenacity>=9.1.2",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
